--- a/products/templates/index.html
+++ b/products/templates/index.html
@@ -18,7 +18,7 @@
 							<h5 class="card-title">{{ product.name }} - <strong>${{ product.price }}</strong></h5>
 							<p class="card-text">Some quick example text to build on the card title and make up the bulk of the
 								card's content.</p>
-							<a href="#" class="btn btn-primary">Add to cart</a>
+                                                        <a href="{% url 'add_to_cart' product.id %}" class="btn btn-primary">Add to cart</a>
 						</div>
 					</div>
 				</div>
