--- a/products/templates/index.html
+++ b/products/templates/index.html
@@ -18,7 +18,8 @@
 							<h5 class="card-title">{{ product.name }} - <strong>${{ product.price }}</strong></h5>
 							<p class="card-text">Some quick example text to build on the card title and make up the bulk of the
 								card's content.</p>
-							<a href="#" class="btn btn-primary">Add to cart</a>
+                                                        <a href="#" class="btn btn-primary add-to-cart" data-id="{{ product.id }}">Add to cart</a>
+                                                        <a href="#" class="btn btn-secondary add-to-wishlist" data-id="{{ product.id }}" style="margin-left:5px;">Wishlist</a>
 						</div>
 					</div>
 				</div>
